data/derived/comb/progs/unify/prog5786.ml.out
Characters 68-69:
  | h::t -> tenEx (x + 1) h @ [(helper x) * h];;
                          ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
